--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@ users board CRUD
 delete cards and columns on deleting board
 random background image on board
 delete cards on deleting columns
+sort data by sequence
